[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
categories = ["async"]
keywords = ["async", "compat"]
license = "MIT"
readme = "README.md"
homepage = "https://tokio.rs"
repository = "https://github.com/LucioFranco/tokio-compat-02"
description = "Tokio 0.2 compat utilities"
edition = "2018"
name = "tokio-compat-02"
version = "0.1.0"

[dependencies]
once_cell = "1.4"
pin-project-lite = "0.1"
tokio_02 = {version = "0.2.22", package = "tokio", features = ["rt-threaded"]}
tokio = {version = "0.3"}
bytes = "0.5.6"

[dev-dependencies]
hyper = "0.13"
tokio = {version = "0.3", features = ["full"]}
