[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
categories = ["async"]
keywords = ["async", "compat"]
license = "MIT"
readme = "README.md"
homepage = "https://tokio.rs"
repository = "https://github.com/LucioFranco/tokio-compat-02"
description = "Tokio 0.2 compat utilities"
edition = "2018"
name = "tokio-compat-02"
version = "0.1.2"

[dependencies]
once_cell = "1.5"
pin-project-lite = "0.2"
tokio_02 = {version = "0.2.22", package = "tokio", features = ["rt-threaded"]}
tokio = "1"
tokio-stream = "0.1"
bytes = "0.5.6"

[dev-dependencies]
hyper = "0.13"
tokio = {version = "1", features = ["full"]}
